force-app/main/default/objects/Account/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <label>account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>