force-app/main/default/objects/Account/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <label>details</label>
    <length>220</length>
    <type>Text</type>
</CustomField>