force-app/main/default/objects/Account/fields/development__c.field-meta.xml
<CustomField>
    <fullName>development__c</fullName>
    <label>development</label>
    <length>255</length>
    <type>Text</type>
</CustomField>