force-app/main/default/objects/Account/fields/enable__c.field-meta.xml
<CustomField>
    <fullName>enable__c</fullName>
    <label>enable</label>
    <length>220</length>
    <type>Text</type>
</CustomField>